package com.backend.server.model.entity;

public class InquiryType {
}
