// dbdiagram.io 사이트에 복붙하면 그림으로 볼 수 있음

Table users {
  id bigint [primary key]
  name varchar
  student_number varchar
  nickname varchar
  grade varchar
  group varchar
  gender varchar
  professor varchar
  phone_number varchar
  email varchar
  password varchar
  profile_picture varchar
  birth_date date
  restriction_count int
  report_count int
  role varchar
  created_at timestamp
  updated_at timestamp
}

Table classroom {
  id varchar [primary key]
  name varchar
  location varchar
  status varchar
  available boolean
  manager_name varchar
  rental_start_time timestamp
  rental_end_time timestamp
  renter_id bigint
  resource_id bigint
  created_at timestamp
  updated_at timestamp
}

Table equipment {
  id bigint [primary key]
  name varchar
  model_name varchar
  status varchar
  available boolean
  quantity int
  description text
  attachment varchar
  manager_name varchar
  rental_status varchar
  rental_time timestamp
  return_time timestamp
  renter_id bigint
  resource_id bigint
  category_id bigint
  created_at timestamp
  updated_at timestamp
}

Table resource {
  id bigint [primary key]
  resource_type varchar
  created_at timestamp
  updated_at timestamp
}

Table rental_history {
  rental_id bigint [primary key]
  resource_id bigint
  user_id bigint
  rental_start_time timestamp
  rental_end_time timestamp
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table favorite {
  id varchar [primary key]
  user_id bigint
  resource_id bigint
  created_at timestamp
  updated_at timestamp
}

Table notice {
  id bigint [primary key]
  title varchar
  content text
  important bool
  author_id bigint
  created_at timestamp
  updated_at timestamp
}

Table notification {
  id bigint [primary key]
  type varchar
  content text
  author_id bigint
  created_at timestamp
  updated_at timestamp
}

Table community {
  id bigint [primary key]
  title varchar
  nickname varchar
  author_id bigint
  recommand int
  view int
  type varchar
  created_at timestamp
  updated_at timestamp
}

Table community_type {
  id bigint [primary key]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table community_community_type {
  community_id bigint [not null]
  community_type_id bigint [not null]
  created_at timestamp
  updated_at timestamp

  primary key (community_id, community_type_id)
}

Table inquery {
  id bigint [primary key]
  title varchar
  content text
  secret bool
  author_id bigint
  created_at timestamp
  updated_at timestamp
}

Table inquiry_type {
  id bigint [primary key]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table inquiry_inquiry_type {
  inquiry_id bigint [not null]
  inquiry_type_id bigint [not null]
  created_at timestamp
  updated_at timestamp

  primary key (inquiry_id, inquiry_type_id)
}

Table category {
  id bigint [primary key]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Ref: classroom.renter_id > users.id
Ref: classroom.resource_id > resource.id
Ref: equipment.renter_id > users.id
Ref: equipment.resource_id > resource.id
Ref: equipment.category_id > category.id
Ref: favorite.user_id > users.id
Ref: favorite.resource_id > resource.id
Ref: notice.author_id > users.id
Ref: notification.author_id > users.id
Ref: inquery.author_id > users.id
Ref: inquiry_inquiry_type.inquiry_id > inquery.id
Ref: inquiry_inquiry_type.inquiry_type_id > inquiry_type.id
Ref: rental_history.resource_id > resource.id
Ref: rental_history.user_id > users.id
Ref: community.author_id > users.id
Ref: community_community_type.community_type_id > community_type.id
Ref: community_community_type.community_id > community.id